--- a/src/main/resources/aplication.properties
+++ b/src/main/resources/aplication.properties
@@ -1,1 +1,1 @@
-img.dir= /* путь на компьютере до папки, куда будут загружаться картинки (Абсолютный) ..."
+img.dir= /home/drakosha/idea/Project/Ecommerce/img/
