--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/online-shop
-jdbc.username=postgres
+jdbc.username=online_shop
 jdbc.password=admin
